--- a/.github/workflows/the_price_of_thing-Test.yml
+++ b/.github/workflows/the_price_of_thing-Test.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Update pip
+        run: pip install --upgrade pip
+
       - name: Install dependencies
         run: python -m pip install pytest .
 
