--- a/.github/workflows/the_price_of_thing-Test.yml
+++ b/.github/workflows/the_price_of_thing-Test.yml
@@ -48,7 +48,8 @@ jobs:
         run: pip install --upgrade pip
 
       - name: Install dependencies
-        run: python -m pip install pytest .
+        run: pip install pytest
+        # run: python -m pip install pytest .
 
       - name: Run Test
         run: pytest
